--- a/less/swiper.less
+++ b/less/swiper.less
@@ -340,7 +340,7 @@
                 position: relative;
                 left: 0;
                 input{
-                  padding-left:5%;
+                  padding-left:20px;
                   @media @below768{
                     padding-left: 13%;
                   }
@@ -459,6 +459,9 @@
                 .PIXEL2EM(26);
                     
                     width: 230px;
+          }
+          &.upload-image-cover-disabled{
+            opacity: 0.5;
           }
         }      
         &.retirement-content{
