--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -3051,7 +3051,7 @@
                       <span class="placeholder nextline">Bank Name <span ng-bind="modelVal.bankName"></span></span>
                       <span class="placeholder nextline">Branch <span ng-bind="modelVal.bankBranch"></span></span>
                       <span class="placeholder nextline">City <span ng-bind="modelVal.bankCity"></span></span>
-                      <p class="question">My account number is <span class="swiper-input"><input ng-model="modelVal.accountNumber" type="text" name="accnum" ng-disabled="$root.userFlags['user_flags']['vault_locked']" required minlength="11" maxlength="15" ng-change="lookupAccNum()"></span></p>
+                      <p class="question">My account number is <span class="swiper-input"><input ng-model="modelVal.accountNumber" type="text" name="accnum" ng-disabled="$root.userFlags['user_flags']['vault_locked']" required minlength="11" maxlength="15"></span></p>
                       <p class="question">and it is in the name of <span class="swiper-input"><input ng-model="modelVal.accountHolderName" type="text" name="year" ng-disabled="$root.userFlags['user_flags']['vault_locked']" required></span></p>
                       <p class="question">It is a bank of the following type: <select dropdown dropdown-disable="$root.userFlags['user_flags']['vault_locked'] == true ?'locked' : ''" ng-model="modelVal.accountType"><option value="S">Savings</option><option value="C">Current</option></select></p>
                       <div class="checkbox-cover">
@@ -3095,7 +3095,7 @@
         <button ng-show="step > 1" class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="{{$root.redirectUrlContext}}"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="(step == 1)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);saveInfo();(step = step + 1)" ng-disabled="(!modelVal.accountHolderName)||(!modelVal.ifscCode)||(!modelVal.accountNumber)||(!is_acc_supported)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);saveInfo();(step=step + 1)" ng-disabled="(!modelVal.accountHolderName)||(!modelVal.ifscCode)||(!modelVal.accountNumber)" class="fin-app-btn fin-orange">CONTINUE</button>
         <button ng-show="(step == 2)" click-redirect="{{$root.redirectUrlContext}}" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
         <button ng-show="(step == 2)" ng-click="appendValues(modelVal);uploadFileToServer(null,true);(step = step + 1)" ng-disabled="(!modelVal.imageUrl)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
