--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -3042,7 +3042,7 @@
     </div>
     
 </div>
-<div ng-if="swiperName == 'bankInfo'" class="fadeIn swiper-container customSwiper bankInfo type2Sliders" ng-init="step = 1">
+<div ng-if="swiperName == 'bankInfo'" class="fadeIn swiper-container customSwiper bankInfo type2Sliders">
     <div class="swiper-wrapper">
         <div class="swiper-slide">
             <form name="invertorInfoForm1" novalidate>
@@ -3091,11 +3091,11 @@
         <p>Bank Info</p>
     </div>   
     <div class="col-xs-12 col-lg-4 col-sm-7 col-md-4 fin-btn-group-wrapper"> 
-    <div class="fin-btn-group gotoPages">
+    <div class="fin-btn-group gotoPages">step{{step}}
         <button ng-show="step > 1" class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="{{$root.redirectUrlContext}}"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
         <button ng-show="(step == 1)" ng-click="(step=step + 1)" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);saveInfo();(step=step + 1)" ng-disabled="(!modelVal.accountHolderName)||(!modelVal.ifscCode)||(!modelVal.accountNumber)" class="fin-app-btn fin-orange">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);saveInfo();" ng-disabled="(!modelVal.accountHolderName)||(!modelVal.ifscCode)||(!modelVal.accountNumber)" class="fin-app-btn fin-orange">CONTINUE</button>
         <button ng-show="(step == 2)" click-redirect="{{$root.redirectUrlContext}}" class="fin-app-btn fin-skip-btn content-next">SKIP</button>
         <button ng-show="(step == 2)" ng-click="appendValues(modelVal);uploadFileToServer(null,true);(step = step + 1)" ng-disabled="(!modelVal.imageUrl)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
