--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -245,7 +245,7 @@
 					<div class="schemes-inner col-xs-12">
 						<div class="col-xs-12 transactionEach" ng-repeat="transactions in transactionHistory">			
 							<p ><h2 show-factsheet="{{transactions.fund_id}}" class="pull-left col-xs-9 no-padding">{{transactions.fund_name}}</h2></p>
-							<p ng-if="checkNegAmt(transactions.order_amount)" class="target-amount col-xs-3 no-padding no-margin"><span class="content highlight"><span class="currency">&#8377;</span><span class="content ng-binding">({{(transactions.order_amount | removeNegative) | amountSeffix}})</span></span></p>{{checkNegAmt(transactions.order_amount)}}
+							<p ng-if="checkNegAmt(transactions.order_amount)" class="target-amount col-xs-3 no-padding no-margin"><span class="content highlight"><span class="currency">&#8377;</span><span class="content ng-binding">({{(transactions.order_amount | removeNegative) | amountSeffix}})</span></span></p>
 							<p ng-if="!checkNegAmt(transactions.order_amount)" class="target-amount col-xs-3 no-padding no-margin"><span class="content"><span class="currency">&#8377;</span><span class="content ng-binding">{{transactions.order_amount | amountSeffix}}</span></span></p>
 							<div class="list-details">
 								<div class="table">
